--- a/index.html
+++ b/index.html
@@ -11,8 +11,98 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Varela+Round"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Crystal Clicker</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <div class="crystal-clicker">
+        Crystal Clicker!
+      </div>
+
+      <div class="row">
+        <div class="col-5">
+          <div class="instructions">
+            <p>
+              You will be given a random number at the start of the game.
+            </p>
+            <p>
+              There are four crystals below. By clicking on a crystal you will
+              add a specific amount of points to your total score.
+            </p>
+            <p>
+              You win the game by matching your total score to the random
+              number. You lose the game if your total score goes above the
+              random number.
+            </p>
+            <p>
+              The value of each crystal is hidden from you until you click on
+              it.
+            </p>
+            <p>
+              Each time the game starts, it will change the value of each
+              crystal.
+            </p>
+          </div>
+
+          <div class="row">
+            <div class="col-6 random-number" id="random-number">
+              A Random Number Goes Here
+            </div>
+            <div class="col-3 wins-and-losses">
+              <div id="wins">Wins: 0</div>
+              <div id="losses">Losses: 0</div>
+            </div>
+            <div class="col-3"></div>
+
+            <div class="row">
+              <div class="col-12 images">
+                <img
+                  src="./assets/images/gem1.jpg"
+                  alt="gem1"
+                  class="gem"
+                  id="gem1"
+                />
+                <img
+                  src="./assets/images/gem2.png"
+                  alt="gem2"
+                  class="gem"
+                  id="gem2"
+                />
+                <img
+                  src="./assets/images/gem3.jpg"
+                  alt="gem3"
+                  class="gem"
+                  id="gem3"
+                />
+                <img
+                  src="./assets/images/gem4.jpg"
+                  alt="gem4"
+                  class="gem"
+                  id="gem4"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-7"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-6 score-stuff">
+          <div class="score-header">
+            Your total score is:
+          </div>
+          <div id="total-score">
+            0
+          </div>
+        </div>
+        <div class="col-6"></div>
+      </div>
+    </div>
+  </body>
 </html>
